--- a/app.css
+++ b/app.css
@@ -1,8 +1,13 @@
 body {
-    background-color: olive;
+    background-color: orangered;
 }
 
 h1{
     font-size: 10em;
     font-family: 'Courier New', Courier, monospace;
+}
+
+form {
+    color: purple;
+    
 }
